<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color">

    <LinearLayout
        android:id="@+id/bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/app_bg_text"
            android:textColor="@color/app_bg_text_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/app_gray_color"
            android:enabled="false"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:text="@string/test_text"
            android:textColor="@color/app_white_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/play_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/media_layout"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/user_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/app_red_color"
            android:padding="10dp"
            android:textColor="@color/app_white_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/server_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/hello_world"
            android:textSize="14sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/server_base"
            android:layout_alignTop="@id/server_base"
            android:background="@color/app_red_color"
            android:gravity="center"
            android:textColor="@color/app_white_color"
            android:textSize="12sp"
            android:visibility="gone" />

        <ListView
            android:id="@+id/user_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@id/server_base"
            android:layout_below="@id/user_title"
            android:cacheColorHint="@null"
            android:clickable="true"
            android:divider="@null"
            android:dividerHeight="0px"
            android:drawSelectorOnTop="false"
            android:fadingEdge="horizontal"
            android:listSelector="@null" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/online_tv"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="上麦"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/message_iv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="50dp"
                android:src="@mipmap/online_message"
                android:padding="10dp" />

            <ImageView
                android:id="@+id/exit_iv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:src="@mipmap/online_exit"
                android:padding="10dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/room_name_rl"
            android:layout_width="120dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/room_name_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="房间一"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
    </LinearLayout>
    <!--
      <ListView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_bg_text_color"
            android:cacheColorHint="@null"
            android:clickable="true"
            android:divider="@color/app_divider_color"
            android:dividerHeight="1px"
            android:drawSelectorOnTop="false"
            android:fadingEdge="horizontal"
            android:listSelector="@null" />
    -->

    <LinearLayout
        android:id="@+id/tool_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_toLeftOf="@id/media_layout"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/rpc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/app_red_color"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:text="@string/rpc_broadcast_text"
            android:textColor="@color/app_white_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@color/app_red_color"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:text="@string/chat_broadcast_text"
            android:textColor="@color/app_white_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@color/app_red_color"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:text="@string/update_nickname_text"
            android:textColor="@color/app_white_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@color/app_gray_color"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:text="@string/logout_text"
            android:textColor="@color/app_white_color"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/stream_tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tool_layout"
        android:layout_marginBottom="10dp"
        android:layout_toLeftOf="@id/media_layout"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/switch_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@color/app_red_color"
            android:enabled="false"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/switch_camera"
            android:textColor="@color/app_white_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@color/app_red_color"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/publish_stream"
            android:textColor="@color/app_white_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/publish_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@color/app_red_color"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/publish_stream"
            android:textColor="@color/app_white_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/publish_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@color/app_red_color"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/publish_stop_stream"
            android:textColor="@color/app_white_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@color/app_red_color"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/play_stream"
            android:textColor="@color/app_white_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/play_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@color/app_red_color"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/play_stop_stream"
            android:textColor="@color/app_white_color"
            android:textSize="14sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/content_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/stream_tool"
        android:layout_toLeftOf="@id/media_layout"
        android:dividerHeight="0dp"
        android:drawSelectorOnTop="false"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:visibility="gone"></ListView>

    <LinearLayout
        android:id="@+id/stream_layout"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/stream_layout_2"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:layout_alignTop="@id/stream_layout"
        android:layout_toLeftOf="@id/stream_layout"
        android:orientation="horizontal"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/play_layout_2"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:visibility="gone" />
</RelativeLayout>